Fix the alignment of the button hiding raw results

--- a/web/src/Fuz/AppBundle/Resources/public/css/twig.css
+++ b/web/src/Fuz/AppBundle/Resources/public/css/twig.css
@@ -264,7 +264,7 @@ pre.compiled-code {
 .CodeMirror pre.CodeMirror-placeholder {
     color: #999;
 }
-#select-result-rendered, #show-raw-result {
+#select-result-rendered, #show-raw-result, #hide-raw-result {
     margin-top: 5px;
 }
 .visibility-button button {
